{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 7,
  "lineage": "1d5f349b-b8d7-ca99-a7da-701642c6a497",
  "resources": [
    {
      "module": "module.backEnd_instance",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "module.backEnd_instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-18T02:54:23.404-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/shaped-storm-374910/global/firewalls/allow-ssh-backend",
            "log_config": [],
            "name": "allow-ssh-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/backendnetwork",
            "priority": 100,
            "project": "shaped-storm-374910",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/firewalls/allow-ssh-backend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backEnd_instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.backEnd_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "module.backEnd_instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/disks/backend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/shaped-storm-374910/zones/europe-central2-a/instances/backend",
            "instance_id": "6868891171891605775",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "sohaibex:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICjMVWYiTvPhexZ+n0648pDJXV6/Py0SQ1PYEn4bVVTg sohaibex"
            },
            "metadata_fingerprint": "t4vGDPOaiw4=",
            "name": "backend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.190.218",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/backendnetwork",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/regions/europe-central2/subnetworks/backendnetwork",
                "subnetwork_project": "shaped-storm-374910"
              }
            ],
            "project": "shaped-storm-374910",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/instances/backend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "module.backEnd_instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.backEnd_instance",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "module.backEnd_instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/shaped-storm-374910/global/networks/backendnetwork",
            "mtu": 0,
            "name": "backendnetwork",
            "project": "shaped-storm-374910",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/backendnetwork"
          }
        }
      ]
    },
    {
      "module": "module.frontEnd_instance",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "module.frontEnd_instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-18T02:54:23.303-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/shaped-storm-374910/global/firewalls/allow-ssh-frontend",
            "log_config": [],
            "name": "allow-ssh-frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/frontendnetwork",
            "priority": 100,
            "project": "shaped-storm-374910",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/firewalls/allow-ssh-frontend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontEnd_instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.frontEnd_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "module.frontEnd_instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/disks/frontend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/shaped-storm-374910/zones/europe-central2-a/instances/frontend",
            "instance_id": "2113694327416451343",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "sohaibex:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICjMVWYiTvPhexZ+n0648pDJXV6/Py0SQ1PYEn4bVVTg sohaibex"
            },
            "metadata_fingerprint": "t4vGDPOaiw4=",
            "name": "frontend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.193.48",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/frontendnetwork",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/regions/europe-central2/subnetworks/frontendnetwork",
                "subnetwork_project": "shaped-storm-374910"
              }
            ],
            "project": "shaped-storm-374910",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/instances/frontend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "module.frontEnd_instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.frontEnd_instance",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "module.frontEnd_instance.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/shaped-storm-374910/global/networks/frontendnetwork",
            "mtu": 0,
            "name": "frontendnetwork",
            "project": "shaped-storm-374910",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/frontendnetwork"
          }
        }
      ]
    }
  ]
}